// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test click error text reload 1`] = `
"<div class=\\"var-list var--box\\">
  <!--v-if-->
  <!--v-if-->
  <div class=\\"var-list__error\\">点击重试</div>
  <div class=\\"var-list__detector\\"></div>
</div>"
`;

exports[`test click error text reload 2`] = `
"<div class=\\"var-list var--box\\">
  <div class=\\"var-list__loading\\">
    <div class=\\"var-list__loading-text\\">正在加载</div>
    <div class=\\"var--box var-loading\\">
      <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 20px; height: 20px;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <div class=\\"var-list__detector\\"></div>
</div>"
`;

exports[`test list example 1`] = `
"<div class=\\"var-sticky\\" style=\\"z-index: 10; top: 50px;\\">
  <div class=\\"var-sticky__wrapper\\" style=\\"z-index: 10;\\">
    <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding\\" style=\\"margin-bottom: 10px;\\">
      <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
        <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\">基本使用</div>
        <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\">加载失败</div>
        <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\">提示文字</div>
        <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px);\\"></div>
      </div>
    </div>
  </div>
</div>
<div class=\\"var-swipe var-tabs-items\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 0px; transform: translateX(0px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item var-tab-item var-tab-item--inactive\\" style=\\"width: 0px; transform: translateX(0px);\\"></div>
    <div class=\\"var-swipe-item var-tab-item var-tab-item--inactive\\" style=\\"width: 0px; transform: translateX(0px);\\"></div>
    <div class=\\"var-swipe-item var-tab-item var-tab-item--inactive\\" style=\\"width: 0px; transform: translateX(0px);\\"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`test list finished 1`] = `
"<div class=\\"var-list var--box\\">
  <!--v-if-->
  <div class=\\"var-list__finished\\">暂无更多</div>
  <!--v-if-->
  <div class=\\"var-list__detector\\"></div>
</div>"
`;

exports[`test list immediate check 1`] = `
"<div class=\\"var-list var--box\\">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div class=\\"var-list__detector\\"></div>
</div>"
`;
